Update OAS file

--- a/openapi/oas-1.yaml
+++ b/openapi/oas-1.yaml
@@ -1,13 +1,14 @@
 openapi: 3.0.2
 info:
   title: CookBook REST API
-  description: CookBook REST API allows you to manage your own recipes! :)
+  description: CookBook REST API allows you to manage your own recipes!
   version: "1.0"
 tags:
 - name: Recipes
   externalDocs:
     url: docs/tags/Recipes.md
 - name: Ingredients
+  description: This is an ingrdients list
 - name: Steps
   externalDocs:
     url: docs/tags/Steps.md
