--- a/openapi/examples/UpdateStepByIdRequestBodyExample.yaml
+++ b/openapi/examples/UpdateStepByIdRequestBodyExample.yaml
@@ -1,5 +1,5 @@
 summary: UpdateStepById response
-description: A common succesful response for a UpdateStepById operation
+description: A common succesful response for a UpdateStepById operation.
 value:
   step:
     action: mash
