--- a/.github/workflows/zoas_doc_publish.yaml
+++ b/.github/workflows/zoas_doc_publish.yaml
@@ -2,6 +2,8 @@ name: ZOAS documentation publish
 on:
   repository_dispatch:
     types: publish
+  pull_request:
+    types: [opened, reopened, synchronize]
 env:
   ZOAS_RELEASE_TAG: latest
 
@@ -13,25 +15,21 @@ jobs:
       - name: Checkout source
         uses: zendesk/checkout@v2
         with:
-          token: ${{ secrets.ORG_GITHUB_WRITE_TOKEN }}
+          token: ${{ secrets.ORG_GITHUB_TOKEN }}
       - name: Checkout action
         uses: zendesk/checkout@v2
         with:
           repository: zendesk/redback-github-actions
-          token: ${{ secrets.ORG_GITHUB_WRITE_TOKEN }}
-          path: .github/redback-github-actions/tree/RED-1170-Add-Postman-In-Github-Action
+          token: ${{ secrets.ORG_GITHUB_TOKEN }}
+          path: .github/redback-github-actions
+          ref: RED-1170-Add-Postman-In-Github-Action
       - name: Generate documents
         env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.ORG_GITHUB_WRITE_TOKEN }}
-        uses: ./.github/redback-github-actions/tree/RED-1170-Add-Postman-In-Github-Action/actions/zoas-doc-publish
+          GITHUB_ACCESS_TOKEN: ${{ secrets.ORG_GITHUB_TOKEN }}
+        uses: ./.github/redback-github-actions/actions/zoas-doc-publish
         with:
           documentBaseDir: docs/
           visibility: "\"\""
           mappingPath: .github/workflows/hello.csv
-      - name: Slack notify on failure
-        if: failure()
-        uses: zendesk/ga/slack-post-msg@v2
-        with:
-          channel: CS0C422GJ
-          slack-auth-token: ${{ secrets.ORG_SLACK_TOKEN }}
-          status: ${{ job.status }}
+
+      
