pass Postman API key

--- a/.github/workflows/zoas_doc_publish.yaml
+++ b/.github/workflows/zoas_doc_publish.yaml
@@ -31,5 +31,6 @@ jobs:
           documentBaseDir: docs/
           visibility: "\"\""
           mappingPath: .github/workflows/hello.csv
+          POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
 
       
